--- a/app/views/ui/index.html.erb
+++ b/app/views/ui/index.html.erb
@@ -12,7 +12,7 @@
     <div class="container">
       <h1>Hello</h1>
       <span>(from app/views/ui/index.html.erb)</span>
-      <div ui-view></div>
+      <div><ui-view></ui-view></div>
     </div>
 
   </body>
