--- a/app/assets/stylesheets/spa-demo/subjects.css
+++ b/app/assets/stylesheets/spa-demo/subjects.css
@@ -49,7 +49,7 @@ div.thing-info .glyphicon-chevron-right {
 div.thing-info .overlay {
   color: white;
   opacity: 0.0;
-  z-index: 1002;  
+  z-index: 1002;
   cursor: pointer;
 }
 div.thing-info .overlay:hover {
@@ -67,12 +67,38 @@ div.image-marker-info img {
   width: 200px;
 }
 
+.tag-box {
+  margin-bottom: 24px;
+}
 
+.tag-box .content {
+  background-color: #f8f8f8;
+}
 
+.tag-box .thing-list {
+  height: 200px;
+  padding:12px 0;
+  overflow: auto;
+}
 
+.tag-box .title {
+  background-color: rgba(0,0,0,0.8);
+  width:100%;
+  color: white;
+  font-size: 2em;
+  padding: 0 12px;
+}
 
+.tag-box .link-things {
+  padding: 6px;
+  border-top: solid 1px #e7e7e7;
+}
 
+.find-by-tag-page .area-pane .categories {
+  height: 42vh;
+  overflow-y: auto;
+}
 
-
-
-
+.find-by-tag-page h2 {
+  margin: 5px 0;
+}
