--- a/app/assets/javascripts/spa-demo/config/config.module.js.erb
+++ b/app/assets/javascripts/spa-demo/config/config.module.js.erb
@@ -12,6 +12,7 @@
       authn_page_html: "<%= asset_path('spa-demo/pages/authn_page.html') %>",
       images_page_html: "<%= asset_path('spa-demo/pages/images_page.html') %>",
       things_page_html: "<%= asset_path('spa-demo/pages/things_page.html') %>",
+      tags_page_html: "<%= asset_path('spa-demo/pages/tags_page.html') %>",
       subjects_page_html: "<%= asset_path('spa-demo/pages/subjects_page.html') %>",
 
       navbar_html: "<%= asset_path('spa-demo/layout/navbar/navbar.html') %>",
@@ -36,11 +37,17 @@
       current_things_html: "<%= asset_path('spa-demo/subjects/current_things/current_things.html') %>",
       current_thing_info_html: "<%= asset_path('spa-demo/subjects/current_things/current_thing_info.html') %>",
 
+      tag_list_html: "<%= asset_path('spa-demo/subjects/tags/taglist.html') %>",
+      tag_form_html: "<%= asset_path('spa-demo/subjects/tags/tag_form.html') %>",
+      tag_box_html: "<%= asset_path('spa-demo/subjects/tags/tag_box.html') %>",
+      find_by_tag_html: "<%= asset_path('spa-demo/pages/find_by_tag_page.html')%>",
+      current_tag_html: "<%= asset_path('spa-demo/subjects/current_tags/current_tags.html')%>",
+
       optimized_markers: <%= ENV['OPTIMIZED_MARKERS']!=nil && ENV['OPTIMIZED_MARKERS'].downcase=='true' %>,
       origin_marker: "<%= asset_path('spa-demo/geoloc/markers/marker-red-32x44.png') %>",
       thing_marker: "<%= asset_path('spa-demo/geoloc/markers/marker-black-32x44.png') %>",
       secondary_marker: "<%= asset_path('spa-demo/geoloc/markers/marker-grey-32x44.png') %>",
-      orphan_marker: "<%= asset_path('spa-demo/geoloc/markers/marker-yellow-32x44.png') %>",      
+      orphan_marker: "<%= asset_path('spa-demo/geoloc/markers/marker-yellow-32x44.png') %>",
     });
 
 })();
