--- a/app/assets/javascripts/spa-demo/layout/navbar/navbar.html
+++ b/app/assets/javascripts/spa-demo/layout/navbar/navbar.html
@@ -26,10 +26,10 @@
                 <a ui-sref="things({id:null})">Things</a></li>
             <li ui-sref-active="active">
                 <a ui-sref="tags({id:null})">Categories</a></li>
-            <li ui-sref-active="active">
+  <!--          <li ui-sref-active="active">
                 <a ui-sref="home">Subjects</a></li>
             <li ui-sref-active="active">
-                <a ui-sref="findByTag">Find by category</a>
+                <a ui-sref="findByTag">Find by category</a>   -->
             </li>
           </ul>
 
