--- a/app/assets/javascripts/spa-demo/config/config.module.js.erb
+++ b/app/assets/javascripts/spa-demo/config/config.module.js.erb
@@ -13,6 +13,7 @@
       images_page_html: "<%= asset_path('spa-demo/pages/images_page.html') %>",
       things_page_html: "<%= asset_path('spa-demo/pages/things_page.html') %>",
       subjects_page_html: "<%= asset_path('spa-demo/pages/subjects_page.html') %>",
+      image_things_page_html: "<%= asset_path('spa-demo/pages/image_things_page.html') %>",
 
       navbar_html: "<%= asset_path('spa-demo/layout/navbar/navbar.html') %>",
       tabs_html: "<%= asset_path('spa-demo/layout/tabs/tabs.html') %>",
@@ -28,10 +29,12 @@
       foos_html: "<%= asset_path('spa-demo/foos/foos.html') %>",
       image_selector_html: "<%= asset_path('spa-demo/subjects/images/image_selector.html') %>",
       image_editor_html: "<%= asset_path('spa-demo/subjects/images/image_editor.html') %>",
+      image_things_html: "<%= asset_path('spa-demo/subjects/image_things/image_things.html') %>",
       thing_editor_html: "<%= asset_path('spa-demo/subjects/things/thing_editor.html') %>",
       thing_selector_html: "<%= asset_path('spa-demo/subjects/things/thing_selector.html') %>",
 
       current_images_html: "<%= asset_path('spa-demo/subjects/current_images/current_images.html') %>",
+      current_images_collapsed_html: "<%= asset_path('spa-demo/subjects/current_images_collapsed/current_images_collapsed.html') %>",
       current_image_viewer_html: "<%= asset_path('spa-demo/subjects/current_images/current_image_viewer.html') %>",
       current_things_html: "<%= asset_path('spa-demo/subjects/current_things/current_things.html') %>",
       current_thing_info_html: "<%= asset_path('spa-demo/subjects/current_things/current_thing_info.html') %>",
